# apis-instance-manmax

./: .gitignore  .gitmodules  Dockerfile  FactoidData.DUMP.json  README.md  entity_types.json  factoid_from_person_output.json  get_factoids_for_person.py  get_properties.py  get_statement_types.py  model_config.json  property_types.json  pyproject.toml  schema.json  schuh_mappings.json  statement_types.csv  statement_types.json  test_write_output.json  wsgi.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
apis_ontology/: custom_context_processors.py  model_config.py  models.py  parse_docs.py  test_edit_factoid_data.json  test_factoid_from_person.py  test_new_factoid_data.json  todo.todo  urls.py  utils.py  viewsets.py
apis_ontology/migrations/: 0001_initial.py  0002_genericstatement_head_statement.py  0003_conceptualobject_search_notes_family_search_notes_and_more.py  0004_remove_election_position_and_more.py  0005_communicateswith.py  0006_communicateswith_method.py  0007_remove_conceptualobject_search_notes_and_more.py  0008_rename_schuch_index_id_conceptualobject_schuh_index_id_and_more.py  0009_arms_decorationofobject_festivity_giftgiving_and_more.py  0010_alter_arms_options_and_more.py  0011_armour_alter_repairofobject_options_and_more.py  0012_factoid.py  0013_alter_conceptualobject_internal_notes_and_more.py  0014_alter_naming_add_name_alter_naming_forename_and_more.py  0015_typology_roletype.py  0016_rename_armourpiece_armourpart_and_more.py  0017_rename_repairofobject_repairofarmour_and_more.py  0018_transportationofarmour_and_more.py  0019_familymembership_and_more.py  0020_armstype_alter_conceptualobject_internal_notes_and_more.py  0021_remove_arms_arms_type.py  0022_conceptualobject_alternative_schuh_ids_and_more.py  0023_alter_conceptualobject_alternative_schuh_ids_and_more.py  0024_verschreibung_alter_naming_options_and_more.py  0025_groupmembership.py  0026_genericrelationship.py  0027_fictionalplace_alter_activity_options_and_more.py  0028_textualperformance.py  0029_debtowed_taxesandincome.py  0030_alter_debtowed_amount_alter_debtowed_currency_and_more.py  0031_depicitionofpersoninart_textualcitationallusion.py  0032_artworkhasadditionalname_and_more.py  0033_alter_depicitionofpersoninart_options.py  0035_dispute_rightstoplace_rightstoplacetype.py  (+46 more)
(+91 files in other folders)
