[tool.poetry]
name = "apis-instance-manmax"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Richard Hadden <richard.hadden@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = ">=4.1,<4.2"
whitenoise = "^5.2.0"
sentry-sdk = "*"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
django-csp = "^3.7"
psycopg2 = "^2.9.6"
pyzotero = "^1.5.5"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", branch = "manmax" }
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git", branch = "main" }
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
apis-override-select2js = { git="https://github.com/acdh-oeaw/apis-override-select2js" }
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
